--- a/src/components/Prompt/GoalIsSet/style.css
+++ b/src/components/Prompt/GoalIsSet/style.css
@@ -4,6 +4,11 @@
 .checkbox-container {
   margin-top: 15px;
 }
+
+.checkbox-container__checked {
+  opacity: 0.7;
+}
+
 .checkbox-container input[type='checkbox'] {
   display: none;
 }
@@ -37,8 +42,8 @@
   background: #fff;
   transform: translate(1px, 6px) rotate(45deg);
   transform-origin: left;
-  transition: all 150ms;
-  transition-delay: 150ms;
+  transition: all 80ms;
+  transition-delay: 50ms;
 }
 
 .checkbox-container input[type='checkbox']:checked ~ .checkbox:before {
@@ -65,11 +70,11 @@
   display: block;
   width: 100%;
   height: 2px;
-  box-shadow: 0 1px rgba(255, 255, 255, 0.6);
+  box-shadow: 0 1px rgba(255, 255, 255, 0.7);
   margin-top: -0.7em;
-  background: white;
+  background: rgba(255, 255, 255, 0.7);
   transform-origin: center left;
-  animation: strikethrough 500ms cubic-bezier(0.55, 0, 0.1, 1) 1 forwards;
+  animation: strikethrough 300ms cubic-bezier(0.55, 0, 0.1, 1) 1 forwards;
   transition: transform cubic-bezier(0.55, 0, 0.1, 1);
   opacity: 0;
 }
